--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,21 @@
 version: '3.8'
 
 services:
-  app:
+  web:
     build: .
     ports:
-      - "8000:8000"
+      - "80:80"
     depends_on:
-      - mongodb
+      - mongo
     environment:
-      - MONGODB_URI=mongodb://mongodb:27017/blog_db
-    volumes:
-      - .:/app
+      - MONGO_URI=mongodb://mongo:27017/blog_db
 
-  mongodb:
+  mongo:
     image: mongo:latest
     ports:
       - "27017:27017"
     volumes:
-      - mongodb_data:/data/db
+      - mongo-data:/data/db
 
 volumes:
-  mongodb_data:
+  mongo-data:
