--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,14 +4,21 @@ services:
   web:
     build: .
     ports:
-      - "80:80"
+      - "8000:80"
+    environment:
+      - SECRET_KEY=${SECRET_KEY}
+      - ALGORITHM=${ALGORITHM}
+      - ACCESS_TOKEN_EXPIRE_MINUTES=${ACCESS_TOKEN_EXPIRE_MINUTES}
+      - MONGODB_URI=${MONGODB_URI}
     depends_on:
       - mongo
-    environment:
-      - MONGO_URI=mongodb://mongo:27017/blog_db
 
   mongo:
-    image: mongo:latest
+    image: mongo:6.0
+    restart: always
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
     ports:
       - "27017:27017"
     volumes:
