--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
 SECRET_KEY=your_secret_key_here
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
-MONGODB_URI=mongodb+srv://PostBlog:TfHvzkqt2xwkAFzE@postblog.nlj46.mongodb.net/?retryWrites=true&w=majority&appName=PostBlog
+DB_USER=PostBlog
+DB_PASS=TfHvzkqt2xwkAFzE
+DB_HOST=postblog.nlj46.mongodb.net
+DB_NAME=PostBlog
