--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   web:
     build: .
@@ -9,12 +7,15 @@ services:
       - SECRET_KEY=${SECRET_KEY}
       - ALGORITHM=${ALGORITHM}
       - ACCESS_TOKEN_EXPIRE_MINUTES=${ACCESS_TOKEN_EXPIRE_MINUTES}
-      - MONGODB_URI=${MONGODB_URI}
+      - DB_USER=${DB_USER}
+      - DB_PASS=${DB_PASS}
+      - DB_HOST=${DB_HOST}
+      - DB_NAME=${DB_NAME}
     depends_on:
       - mongo
 
   mongo:
-    image: mongo:6.0
+    image: mongo:6.0.5  # Updated to a more specific version
     restart: always
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
